; ModuleID = '/home/carl/AnghaBench/php-src/sapi/apache2handler/extr_sapi_apache2.c_php_apache_sapi_read_post.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/apache2handler/extr_sapi_apache2.c_php_apache_sapi_read_post.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@server_context = common dso_local global i32 0, align 4
@AP_MODE_READBYTES = common dso_local global i32 0, align 4
@APR_BLOCK_READ = common dso_local global i32 0, align 4
@APR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64)* @php_apache_sapi_read_post to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @php_apache_sapi_read_post(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %6, align 8
  %10 = load i32, i32* @server_context, align 4
  %11 = call %struct.TYPE_5__* @SG(i32 %10)
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %7, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %8, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %9, align 8
  %18 = load i64, i64* %4, align 8
  store i64 %18, i64* %5, align 8
  br label %19

19:                                               ; preds = %46, %2
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* @AP_MODE_READBYTES, align 4
  %25 = load i32, i32* @APR_BLOCK_READ, align 4
  %26 = load i64, i64* %5, align 8
  %27 = call i64 @ap_get_brigade(i32 %22, i32* %23, i32 %24, i32 %25, i64 %26)
  %28 = load i64, i64* @APR_SUCCESS, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %53

30:                                               ; preds = %19
  %31 = load i32*, i32** %9, align 8
  %32 = load i8*, i8** %3, align 8
  %33 = call i32 @apr_brigade_flatten(i32* %31, i8* %32, i64* %5)
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 @apr_brigade_cleanup(i32* %34)
  %36 = load i64, i64* %5, align 8
  %37 = load i64, i64* %6, align 8
  %38 = add i64 %37, %36
  store i64 %38, i64* %6, align 8
  %39 = load i64, i64* %6, align 8
  %40 = load i64, i64* %4, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %45, label %42

42:                                               ; preds = %30
  %43 = load i64, i64* %5, align 8
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %46, label %45

45:                                               ; preds = %42, %30
  br label %53

46:                                               ; preds = %42
  %47 = load i64, i64* %5, align 8
  %48 = load i8*, i8** %3, align 8
  %49 = getelementptr inbounds i8, i8* %48, i64 %47
  store i8* %49, i8** %3, align 8
  %50 = load i64, i64* %4, align 8
  %51 = load i64, i64* %6, align 8
  %52 = sub i64 %50, %51
  store i64 %52, i64* %5, align 8
  br label %19

53:                                               ; preds = %45, %19
  %54 = load i64, i64* %6, align 8
  ret i64 %54
}

declare dso_local %struct.TYPE_5__* @SG(i32) #1

declare dso_local i64 @ap_get_brigade(i32, i32*, i32, i32, i64) #1

declare dso_local i32 @apr_brigade_flatten(i32*, i8*, i64*) #1

declare dso_local i32 @apr_brigade_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
